[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/MainFrameWidgets.gd" type="Script" id=1]
[ext_resource path="res://assets/UI_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/paper_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/DynamicWidgets.tscn" type="PackedScene" id=5]

[node name="MainFrame" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBox" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 1072.0
margin_bottom = 1912.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DynamicWidgets" parent="VBox" instance=ExtResource( 5 )]
margin_right = 1064.0
margin_bottom = 1800.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NavigationBar" type="HBoxContainer" parent="VBox"]
margin_top = 1804.0
margin_right = 1064.0
margin_bottom = 1904.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BtnWidgetPage" type="Button" parent="VBox/NavigationBar"]
margin_right = 530.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Widget Page"

[node name="BtnSubmit" type="Button" parent="VBox/NavigationBar"]
visible = false
margin_left = 356.0
margin_right = 708.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Submit"

[node name="BtnSaveAndLoad" type="Button" parent="VBox/NavigationBar"]
margin_left = 534.0
margin_right = 1064.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Save And Load"

[node name="BtnCancel" type="Button" parent="VBox/NavigationBar"]
visible = false
margin_left = 712.0
margin_right = 1064.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Cancel"

[connection signal="pressed" from="VBox/NavigationBar/BtnWidgetPage" to="." method="_on_Widget_Page_pressed"]
[connection signal="pressed" from="VBox/NavigationBar/BtnSubmit" to="." method="_on_Submit_pressed"]
[connection signal="pressed" from="VBox/NavigationBar/BtnSaveAndLoad" to="." method="_on_Save_And_Load_pressed"]
[connection signal="pressed" from="VBox/NavigationBar/BtnCancel" to="." method="_on_Cancel_pressed"]
